--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <input type="text" id="username" placeholder="ユーザー名"><br><br>
     <input type="passward" id="passward" placeholder="パスワード"><br><br>
     
-    <button onclick="redirectToMain()">Go!</button>
+    <button onclick="redirectToMain()">ログイン</button>
 
         
     </div>
